@@ -1,137 +1,0 @@
-# Anjuta Version 1.1.98 
-Compatibility Level: 1 
-
-<PROJECT_DESCRIPTION_START>
-<PROJECT_DESCRIPTION_END>
-<CONFIG_PROGS_START>
-<CONFIG_PROGS_END>
-<CONFIG_LIBS_START>
-PKG_CHECK_MODULES(GST,gstreamer-0.6 gstreamer-gconf-0.6,,exit)
-CFLAGS="$CFLAGS $GST_CFLAGS"
-CPPFLAGS="$CPPFLAGS $GST_CFLAGS"
-LDFLAGS="$LDFLAGS $GST_LIBS"
-
-PKG_CHECK_MODULES(ADDLGNOME,eel-2.0,,exit)
-CFLAGS="$CFLAGS $ADDLGNOME_CFLAGS"
-CPPFLAGS="$CPPFLAGS $ADDLGNOME_CFLAGS"
-LDFLAGS="$LDFLAGS $ADDLGNOME_LIBS"
-<CONFIG_LIBS_END>
-<CONFIG_HEADERS_START>
-<CONFIG_HEADERS_END>
-<CONFIG_CHARACTERISTICS_START>
-<CONFIG_CHARACTERISTICS_END>
-<CONFIG_LIB_FUNCS_START>
-<CONFIG_LIB_FUNCS_END>
-<CONFIG_ADDITIONAL_START>
-<CONFIG_ADDITIONAL_END>
-<CONFIG_FILES_START>
-<CONFIG_FILES_END>
-<MAKEFILE_AM_START>
-<MAKEFILE_AM_END>
-
-props.file.type=project
-
-anjuta.version=1.1.98
-anjuta.compatibility.level=1
-
-project.name=gamp
-project.type=LIBGLADE2
-project.target.type=EXECUTABLE
-project.version=0.2
-project.author=Mason Kidd
-project.source.target=gamp
-project.has.gettext=1
-project.gui.command=
-project.programming.language=C
-project.excluded.modules=intl
-
-project.config.extra.modules.before=
-project.config.extra.modules.after=
-project.config.blocked=0
-project.config.disable.overwriting=0 0 0 0 0 0 0 0 0 
-
-project.menu.entry=Audio Player
-project.menu.group=Multimedia
-project.menu.comment=gamp Audio Player
-project.menu.icon=gamp.png
-project.menu.need.terminal=0
-
-project.configure.options=
-anjuta.program.arguments=
-preferences.build.option.jobs=0
-preferences.build.option.silent=0
-preferences.build.option.autosave=1
-preferences.anjuta.make.options=-k
-preferences.make=make
-preferences.build.option.keep.going=1
-preferences.build.option.warn.undef=0
-preferences.autoformat.custom.style= -i8 -sc -bli0 -bl0 -cbi0 -ss
-preferences.autoformat.style=Style of Kangleipak
-preferences.indent.opening=0
-preferences.autoformat.disable=1
-preferences.indent.automatic=1
-preferences.use.tabs=1
-preferences.indent.size=4
-preferences.tabsize=4
-preferences.indent.closing=0
-
-module.include.name=include
-module.include.type=
-module.include.files=
-
-module.source.name=src
-module.source.type=
-module.source.files=\
-	main.c\
-	gui-callbacks.c\
-	GAPPlayer.c\
-	GAPPlayer.h\
-	main.h\
-	playlist.c\
-	playlist.h
-
-module.pixmap.name=pixmaps
-module.pixmap.type=
-module.pixmap.files=\
-	gamp.png\
-	gamp-next.png\
-	gamp-pause.png\
-	gamp-play.png\
-	gamp-previous.png\
-	gamp-repeat.png\
-	gamp-shuffle.png\
-	gamp-stop.png\
-	gamp-volume.png\
-	gamp-eject.png\
-	gamp-playlist.png
-
-module.data.name=data
-module.data.type=
-module.data.files=\
-	open-location.glade
-
-module.help.name=help
-module.help.type=
-module.help.files=
-
-module.doc.name=doc
-module.doc.type=
-module.doc.files=
-
-module.po.files=
-
-compiler.options.supports=
-compiler.options.include.paths=
-compiler.options.library.paths=
-compiler.options.libraries=
-compiler.options.libraries.selected=
-compiler.options.defines=
-compiler.options.defines.selected=
-compiler.options.warning.buttons=0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 
-compiler.options.optimize.buttons=0 1 0 0 
-compiler.options.other.buttons=1 0 
-compiler.options.other.c.flags=
-compiler.options.other.l.flags=
-compiler.options.other.l.libs=
-
-project.src.paths=
