@@ -1,10 +1,4 @@
-## Process this file with automake to produce Makefile.in
-
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
-gamp_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@
+gamp_pixmapsdir = $(pkgdatadir)/pixmaps
 
 gamp_pixmaps_DATA = \
 	gamp_icon.png\
