@@ -1,16 +1,5 @@
-## Process this file with automake to produce Makefile.in
-
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
 INCLUDES = \
 	$(GNOME_CFLAGS)
-
-gamp_CFLAGS =\
-	 -Wall\
-	 -O1\
-	 -g
 
 bin_PROGRAMS = gamp
 
